[package]
name = "snmp-sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rasn = "0.12.4"
rasn-mib = "0.12.4"
rasn-smi = "0.12.4"
rasn-snmp = "0.12.4"
serde = { version = "1.0.193", features = ["std", "serde_derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
warp = "0.3.6"

[dev-dependencies]
serde_derive = "1.0.193"
